chages in edit profile

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -161,7 +161,9 @@
   },
   "profile": {
     "title": "User Profile",
+    "editProfile": "Edit Profile",
     "edit": "Edit",
+    "visitCharge": "Visit Charge",
     "charges": "charges",
     "rating": "Rating",
     "distanceCharges": "Distance Charges",
