--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -326,5 +326,11 @@
     "send": "भेजें",
     "greeting": "नमस्ते! आज मैं आपकी कैसे मदद कर सकता हूं?",
     "thinking": "सोच रहा हूं..."
+  },
+  "errorScreen": {
+    "title": "उफ़! कुछ गलत हो गया",
+    "defaultMessage": "हमें सर्वर से कनेक्ट करने में समस्या हो रही है। कृपया अपना इंटरनेट कनेक्शन जांचें और पुनः प्रयास करें।",
+    "retry": "पुनः प्रयास करें",
+    "goBack": "वापस जाएं"
   }
 }
